# quant

./: .env  .gitattributes  .gitignore  .gitmodules  LICENSE  deno.json  docker-compose.yaml  main.ts  prometheus.yaml  readme.md
_bench/: agg_verification.ipynb  agg_verification.ts  live_simulation.ts
_playground/: agg_verification.ipynb  agg_verification.ts  client.ipynb
core/: aggregator.ts  constants.ts  engine.ts  event_source.ts  lifecycle_manager.ts  mod.ts  plugin_manager.ts  stats.ts  subscription.ts  telemetry.ts  types.ts  utils.ts
core/db/: AggregateQuery.ts  Aggregation.ts  Cache.ts  DatasetQuery.ts  Event.ts  FGAHierarchy.ts  FGAQuery.ts  FlatGroupsAggregationQuery.ts  GroupsAggregationQuery.ts  Partition.ts  RealtimeBuffer.ts  RedisFGAQuery.ts  RedisKVStore.ts  RedisQuery.ts  RedisQueue.ts  Report.ts  ReportCache.ts  ReportQuery.ts  Subscription.ts
core/doc/: dataflow.drawio  dev.md  schema.drawio
core/rust/: Cargo.toml  README.md
core/rust/src/: lib.rs
core/tests/: 0_aggregation_test.ts  10_dataset_boolean_groups_test.ts  11_dataset_boolean_groups_buffer_test.ts  12_lifecycle_management_test.ts  utils.ts  (+18 more)
filters/: Cargo.toml  README.md  core.plugin.ts  http.plugin.ts  mod.ts
formula/: Cargo.toml  core.plugin.ts  formula.test.ts  http.plugin.ts  mod.ts  readme.md
http/: client.ts  create_http.ts  mod.ts  openapi-ts.config.ts  openapi.json  schemas.ts  types.ts  utils.ts
realtime/: account.plugin.ts  core.plugin.ts  http.plugin.ts  manager.ts  realtime_test.ts  types.ts
ui/: deno.json
web/: client.ts  deno.json  main.ts  root.ts
(+176 files in other folders)
