[package]
name = "quant-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
serde_json = "1.0"
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1.7"
